2008-05-05  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Readable SQL statements.

2008-05-05  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Caught checkout exceptions.

2008-04-21  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:

	Deleted '/' from the beginning of each path.

2008-04-09  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:

	Use to_utf8 instead of unicode.
	
2008-04-09  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/main.py:

	Removed invalid comment (# parser.run () by carlosgc)

2008-04-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/main.py:
	* pycvsanaly2/ExtensionsManager.py:
	* pycvsanaly2/extensions/Metrics.py:
	* pycvsanaly2/extensions/__init__.py:

	Implement extensions dependencies system.
	
2008-04-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Save file paths relative to the repository root path for CVS.
	
2008-04-01  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Tested against SF.net (CVS) repositories. Paths are
	correctly identified for those repositories.

	SVN not working yet due to an apparent bug in RepositoryHandler.

2008-03-31  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:
	* pycvsanaly2/extensions/Metrics.py:

	All the paths begin now with a /
	Metrics calculated so far: LOC, SLOC.
	Programming language also identified.

2008-03-12  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/Database.py:

	Use datetime field instead of timestamp in scmlog table. Problem
	spotted by Santiago Dueñas. Fixes bug #401.
	
2008-03-11  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/ExtensionsManager.py: